fix: overlapping text in tx summary

--- a/src/components/transactions/TxSummary/styles.module.css
+++ b/src/components/transactions/TxSummary/styles.module.css
@@ -1,7 +1,7 @@
 .gridContainer {
   --grid-nonce: minmax(50px, 0.25fr);
   --grid-type: minmax(150px, 3fr);
-  --grid-info: minmax(150px, 3fr);
+  --grid-info: minmax(250px, 3fr);
   --grid-date: minmax(200px, 3fr);
   --grid-confirmations: minmax(150px, 1fr);
 
@@ -13,11 +13,10 @@
   gap: var(--space-2);
   align-items: center;
   white-space: nowrap;
-  grid-template-columns: var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
-  var(--grid-actions)
-  var(
-      --grid-status
-    );
+  grid-template-columns:
+    var(--grid-nonce) var(--grid-type) var(--grid-info) var(--grid-date) var(--grid-confirmations)
+    var(--grid-actions)
+    var(--grid-status);
   grid-template-areas: 'nonce type info date confirmations  status actions';
 }
 
@@ -47,7 +46,7 @@
   color: var(--color-text-secondary);
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1460px) {
   .gridContainer {
     gap: var(--space-1);
     display: flex;
